...
  Widget _buildReceiptAppBarMenu(String fullPath) {
    if (fullPath.contains("view")) {
      return ReceiptEditPopupMenu(
          groupId: receiptModel.receipt.groupId,
          popupMenuChildren: [
            PopupMenuItem(
              child: Text("Edit"),
              onTap: () => _goAfterMenu(
                  "/receipts/${receiptModel.receipt.id}/edit"),
            )
          ]);
    }

...
