...

    // Check if initialValue exists in the dropdown items
    bool valueExists = dropdownItems.any((item) => item.value == initialValue);

    return FormBuilderDropdown(
      name: "groupId",
      decoration: const InputDecoration(labelText: "Group"),
      items: dropdownItems,
      validator: FormBuilderValidators.required(),
      initialValue: valueExists ? initialValue : null,
      enabled: widget.enabled,
      // Set to null if value doesn't exist
      onChanged: (value) {
...
